--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -72,7 +72,10 @@ body{
 }
 
 .logo img {
-	height: 50px;
+	/*height: 50px;*/
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .repo{
